<resources>
    <string name="app_name">Tappy Toes</string>
    <string name="description">Descripcion del producto</string>
    <string name="cart">Carrito de compras</string>
    <string name="product">Modelo de zapatillas</string>
    <string name="catalog">Catalogo de productos</string>
    <string name="quantity">Cantidad:</string>
    <string name="hello">Bienvenido a la tienda Tappy Toes</string>
    <string name="button_checkout">Complete su compra</string>
    <string name="select_product">Haga click sobre un producto para seleccionar la cantidad</string>
    <string name="add_cart">Agregar al carro</string>
    <string name="in_cart">Actualmente en el carrito:</string>
    <string name="product_price">Precio del producto</string>
    <string name="view_cart">Ir al carro</string>


</resources>