<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent" android:layout_width="fill_parent"
    android:background="#ffffff" android:orientation="vertical">

    <LinearLayout
        android:id="@+id/LinearLayoutHeader"
        android:layout_width="wrap_content"
        android:layout_height="446dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ImageViewProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/zapatillas_puma"></ImageView>

        <TextView
            android:id="@+id/TextViewProductTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dip"
            android:text="@string/product"
            android:textColor="#000000"
            android:textSize="26dip"></TextView>

    </LinearLayout>

    <TextView
        android:id="@+id/TextViewProductPrice"
        android:layout_width="fill_parent"
        android:layout_height="37dp"
        android:layout_margin="5dip"
        android:text="@string/product_price"
        android:textColor="#000000"
        android:textStyle="bold"></TextView>


    <TextView
        android:id="@+id/TextViewProductDetails"
        android:layout_width="398dp"
        android:layout_height="82dp"
        android:layout_margin="5dip"
        android:layout_weight="1"
        android:text="@string/description"
        android:textColor="#000000"></TextView>

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="fill_parent" android:id="@+id/linearLayoutCurrentlyInCart">
        <TextView android:id="@+id/textViewCurrentlyInCart"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:textSize="20dip" android:textColor="#000000" android:text="@string/in_cart"
            android:layout_margin="5dp"></TextView>
    </LinearLayout>


    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="fill_parent" android:id="@+id/linearLayoutAddLayout"
        android:orientation="horizontal" android:layout_margin="5dp">
        <TextView android:id="@+id/textView1" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="Cantidad:"
            android:textColor="#000000"></TextView>
        <EditText android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1"
            android:text="1" android:gravity="right" android:id="@+id/editTextQuantity"
            android:inputType="number"></EditText>
        <Button android:id="@+id/ButtonAddToCart"
            android:layout_gravity="right" android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:text="@string/add_cart"></Button>
    </LinearLayout>
</LinearLayout>